syntax = "proto3";

package proto;

option go_package = "github.com/ArquitecturaDeSistemas/usermicroservice/proto";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
  string nombre = 1;
  string apellido = 2;
  string correo = 3;
  string contrasena = 4;
}

message CreateUserResponse {
  string id = 1;
}
